# hexo_rl

./: .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml  FUTURE_REFACTORS.md  LICENSE  Makefile  README.md  TODO.md  dashboard.py  make.local.example  pytest.ini  requirements.txt  setup.sh
.github/: PULL_REQUEST_q13.md
archive/: README.md
audit/: f_a1_bootstrap_model_residuals.md  q12_s_ordering_audit.md
configs/: ablation_169_a2.yaml  ablation_169_a3.yaml  ablation_169_a4.yaml  ablation_170_gpool_bias.yaml  bootstrap_12h.yaml  bootstrap_16h.yaml  bootstrap_24h.yaml  bootstrap_30min.yaml  bootstrap_48h.yaml  bootstrap_4h.yaml  bootstrap_8h.yaml  corpus.yaml  corpus_filter.yaml  default.yaml  diag_probes_DO_NOT_TRAIN.yaml  eval.yaml  fast_debug.yaml  game_replay.yaml  long_run_balanced.yaml  model.yaml  monitoring.yaml  monitors.yaml  selfplay.yaml  training.yaml  verify_pool.yaml
data/: bootstrap_corpus_v6w25.npz.metadata.json
docs/: 00_agent_context.md  01_architecture.md  02_roadmap.md  03_tooling.md  04_bootstrap_strategy.md  05_community_integration.md  06_CORPUS_DESIGN.md  06_MEMORY_MCP.md  06_OPEN_QUESTIONS.md  07_PHASE4_SPRINT_LOG.md  07_PHASE4_SPRINT_LOG_BACKUP.md  08_DASHBOARD_SPEC.md  09_VIEWER_SPEC.md  10_COMMUNITY_BOT_ANALYSIS.md  CORPUS_REPORT.md  FUTURE_REFACTORS.md  q12_s_ordering_audit.md  refactor-template.md  sweep_deployment.md  sweep_harness.md
engine/: Cargo.toml  pyproject.toml
engine/benches/: board_bench.rs  mcts_bench.rs
engine/hexo-graph/: Cargo.toml
engine/hexo-graph/benches/: build_bench.rs
engine/hexo-graph/src/: lib.rs
engine/src/: debug_trace.rs  game_runner.rs  inference_bridge.rs  lib.rs
engine/src/board/: mod.rs  moves.rs  state.rs  threats.rs  zobrist.rs
engine/src/board/state/: cluster.rs  core.rs  encode.rs  mod.rs
engine/src/encoding/: mod.rs  registry.rs  registry.toml  spec.rs
engine/src/encoding/registry/: mod.rs  parse.rs
engine/src/encoding/spec/: mod.rs  validate.rs
engine/src/formations/: mod.rs
engine/src/game_runner/: config.rs  gumbel_search.rs  mod.rs  records.rs  worker_loop.rs
engine/src/game_runner/worker_loop/: atomics.rs  channels.rs  inner.rs  mod.rs  params.rs  rotate.rs  stats.rs
engine/src/mcts/: backup.rs  completed_q.rs  dirichlet.rs  golden_tests.rs  mod.rs  node.rs  policy.rs  selection.rs  tests.rs
engine/src/pyo3/: board.rs  encoding.rs  graph_contract.rs  mcts.rs  mod.rs  tactics.rs  utils.rs
engine/src/replay_buffer/: mod.rs  persist.rs  push.rs  push_config.rs  sample.rs  sampling.rs  storage.rs  sym_tables.rs
engine/src/replay_buffer/hexg/: mod.rs  persist.rs  push.rs  sample.rs  storage.rs  tests.rs
engine/src/replay_buffer/persist/: load.rs  mod.rs
engine/src/tactics/: eval.rs  mod.rs  ordering.rs  search.rs  tt.rs
engine/tests/: batcher_default.rs  d6_sym_tables.rs  dirichlet_parity.rs  inv15_v6w25_encode_roundtrip.rs  inv16_v8_pass_slot_dispatch.rs  inv17_pyregistryspec_supersedes_pyencodingspec.rs  inv18_window_center_negative_bbox.rs  inv18b_cluster_center_negative_bbox.rs  inv19_selfplayrunner_config_builder_byte_equivalence.rs  inv20_replay_buffer_push_config_field_shape.rs  inv21_p68_module_splits_byte_identity.rs  inv23_selfplayrunner_encoding_name_e2e.rs  inv24_k_max_registry_field.rs  inv25_worker_loop_split_byte_identity.rs  inv26_ply_cap_value.rs  inv27_threat_target_colony.rs  inv_dws3_solver_in_loop_wiring.rs  inv_o1_forced_win_one_hot_wiring.rs  perspective_parity.rs  playout_cap_mutex.rs  pool_overflow.rs  random_opening_plies.rs  replay_buffer_v5_roundtrip.rs  replay_buffer_v6_roundtrip.rs  rotation_parity.rs  temperature_parity_golden.rs  temperature_schedule.rs  test_aggregate_policy_v6w25.rs  test_drain_shutdown_no_false_draws.rs  test_p13_wire_signature_crossload.rs  test_radius_override.rs  test_sym_tables_for_v6_parity.rs  test_worker_loop_v6w25_smoke.rs
engine/tests/golden/completed_q/: golden_bits.txt
fixtures/: early_game_probe_v1.npz  threat_probe_baseline.json  threat_probe_human_positions.npz  threat_probe_positions.npz  threat_probe_positions_v6.npz  threat_probe_positions_v6tp.npz  value_probe_50.npz  windowing_probe_positions.npz
native_core/: Cargo.toml  pyproject.toml
native_core/benches/: board_bench.rs
native_core/src/: game_runner.rs  inference_bridge.rs  lib.rs  replay_buffer.rs
native_core/src/board/: bitboard.rs  mod.rs  moves.rs  state.rs  zobrist.rs
native_core/src/formations/: mod.rs
native_core/src/mcts/: mod.rs  node.rs
native_core/src/replay_buffer/: mod.rs  sampling.rs  sym_tables.rs
reports/: FINDINGS_SUMMARY.md  bench_thermal_diagnosis_26_04_15.md  chain_parity_audit_2026-04-18.md  elo_db_anchor_audit_2026-04-18.md  graduation_calibration_2026-04-17.md  gumbel_target_quality_2026-04-17.md  instrumentation_bench_check_2026-04-17.md  post_q13_cleanup_26_04_15.md  q27_zoi_reachability_2026-04-19.md  q27_zoi_reachability_realpositions_2026-04-19.md  s176_a1_kraken_smoke.md  s176_a2_eval_arch.md  s176_a3_selfplay_forensics.md  s176_a4_falsified_scan.md  s176_d_plan.md  s176_e_review.md  s176_phase_b_prompt.md  s181_next_wave_skeleton.md  sprint_172_a10_review.md  sprint_172_summary.md  supply_demand_preflight_2026-04-19.md  threat_probe_v5_2026-04-18.md  tier1_hygiene_wave.md  w1_lens_forensics_2026-04-19.md
scripts/: __init__.py  _v6_live2_smoke_chain.sh  aggregate_a3_mcts_curve.py  aggregate_sweep.py  analyze_calibration.py  analyze_human_corpus.py  analyze_supply_demand_smoke.py  analyze_tempstrength.py  anchor_sha256.py  armc50k_status.sh  backfill_checkpoint_metadata.py  backfill_corpus_metadata.py  bench_v6w25_nn.py  bench_v8_nn.py  benchmark.py  benchmark_mcts.py  benchmark_vl_adaptive.py  build_early_game_probe.py  build_mixed_corpus_a4.py  build_threat_probe_human.py  build_value_probe_fixture.py  build_ws3v3_seed_corpus.py  check_phase_c.py  check_ws3v3_disjointness.py  coherence_tempstrength.py  compute_corpus_axis_baseline.py  compute_threat_pos_weight.py  d1m_monitor.py  d1m_replay_analyzer.py  d1m_status.sh  diag_preflight_d9.py  diag_sweep_log.sh  dpfit_export.py  (+139 more)
(+1475 files in other folders)
