[workspace]
members = ["engine"]
# Vendored eval-only opponent (vendor/bots/hammerhead) is an independent Rust
# crate with its own toolchain pin — keep it out of this workspace so `maturin
# develop` builds it standalone and our `[profile.release]` / resolver don't leak
# into it. Eval-path only; never built by `make build` / bench.
exclude = ["vendor/bots/hammerhead"]
resolver = "2"

[profile.release]
lto = "fat"           # Full cross-crate LTO. MCTS calls board logic calls
                      # Zobrist hashing across module boundaries — LTO inlines all of it.
codegen-units = 1     # Single codegen unit = better optimization at cost of
                      # compile time. We rebuild rarely.
opt-level = 3         # Explicit; already default for release.
panic = "abort"       # No unwinding overhead in the MCTS hot path.
strip = "symbols"     # Smaller binary, slightly faster load. No debug info needed.
