[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
# `extension-module` pulls in the pyo3 flag of the same name, which is what
# you want for the actual Python extension build (maturin). For `cargo test`
# the extension-module flag strips Python symbols from the link, which
# leaves every test binary with unresolved externs like PyErr_SetObject.
# Run tests with: cargo test --no-default-features --features test-with-python
extension-module = ["pyo3/extension-module"]
# Test-only feature: link libpython directly so standalone `cargo test`
# binaries resolve PyO3 C API symbols. Activates the pyo3 `auto-initialize`
# feature, which bootstraps the interpreter at first use.
test-with-python = ["pyo3/auto-initialize"]
# Compile-time-gated root-prior / visit-count trace used by the Phase 4.0
# mode collapse diagnostics (archive/diagnosis_2026-04-10/). Enable via:
#   maturin develop --release -m engine/Cargo.toml --features debug_prior_trace
# Activation at launch is gated a second time by HEXO_PRIOR_TRACE_PATH.
debug_prior_trace = []

[dependencies]
pyo3 = { version = "0.28" }
numpy = { version = "0.28", features = ["half"] }
half = "2"
rand = "0.10"
rand_distr = "0.6"
fxhash = "0.2"
dashmap = "6.0"
flume = "0.12.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "board_bench"
harness = false

[[bench]]
name = "mcts_bench"
harness = false
