[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# `extension-module` tells pyo3 NOT to link libpython — correct for the
# maturin cdylib build (Python loads the .so and already owns libpython).
# Activated by maturin via pyproject.toml `features = ["extension-module"]`.
# NOT in default so `cargo test` links libpython normally and resolves all
# PyO3 C-API symbols without extra flags.
extension-module = ["pyo3/extension-module"]
# Kept for completeness (no longer needed by `make test`).  Activates
# pyo3/auto-initialize for test binaries that acquire the GIL directly.
# Our tests don't call Python::with_gil(), so plain `cargo test` suffices.
test-with-python = ["pyo3/auto-initialize"]
# Compile-time-gated root-prior / visit-count trace used by the Phase 4.0
# mode collapse diagnostics (archive/diagnosis_2026-04-10/). Enable via:
#   maturin develop --release -m engine/Cargo.toml --features debug_prior_trace
# Activation at launch is gated a second time by HEXO_PRIOR_TRACE_PATH.
debug_prior_trace = []

[dependencies]
pyo3 = { version = "0.28" }
numpy = { version = "0.28", features = ["half"] }
half = "2"
rand = "0.10"
rand_distr = "0.6"
fxhash = "0.2"
dashmap = "6.0"
flume = "0.12.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "board_bench"
harness = false

[[bench]]
name = "mcts_bench"
harness = false
