[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Rust core for the Hex Tac Toe AlphaZero engine: MCTS, board state, replay buffer, encoding registry, PyO3 bindings."
license = "Apache-2.0"
repository = "https://github.com/anthropics/hexo-rl"
readme = "../README.md"
keywords = ["alphazero", "mcts", "hex", "hexagonal", "go"]
categories = ["game-development", "algorithms", "science"]
publish = false

[lib]
name = "engine"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# `extension-module` tells pyo3 NOT to link libpython — correct for the
# maturin cdylib build (Python loads the .so and already owns libpython).
# Activated by maturin via pyproject.toml `features = ["extension-module"]`.
# NOT in default so `cargo test` links libpython normally and resolves all
# PyO3 C-API symbols without extra flags.
extension-module = ["pyo3/extension-module"]
# Kept for completeness (no longer needed by `make test`).  Activates
# pyo3/auto-initialize for test binaries that acquire the GIL directly.
# Our tests don't call Python::with_gil(), so plain `cargo test` suffices.
test-with-python = ["pyo3/auto-initialize"]
# Compile-time-gated root-prior / visit-count trace used by the Phase 4.0
# mode collapse diagnostics (archive/diagnosis_2026-04-10/). Enable via:
#   maturin develop --release -m engine/Cargo.toml --features debug_prior_trace
# Activation at launch is gated a second time by HEXO_PRIOR_TRACE_PATH.
debug_prior_trace = []

[dependencies]
pyo3 = { version = "0.28" }
numpy = { version = "0.28", features = ["half"] }
half = "2"
rand = "0.10"
rand_distr = "0.6"
fxhash = "0.2"
dashmap = "6.0"
flume = "0.12.0"
toml = "0.9"
once_cell = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "board_bench"
harness = false

[[bench]]
name = "mcts_bench"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
use_self = "allow"
needless_pass_by_value = "allow"

[lints.rust]
unused_imports = "warn"
dead_code = "warn"
