[package]
name = "native_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "native_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
rand = "0.8"
fxhash = "0.2"
dashmap = "6.0"
flume = "0.12.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "board_bench"
harness = false

[[bench]]
name = "mcts_bench"
harness = false
